src/parser/parse.java
package parser;

import lexer.token;
import nodes.*;

import java.io.IOException;
import java.io.PrintWriter;
import java.util.*;

public class parse {

    private LinkedList<token> tokens;
    private token lookahead;
    private error e;
    private boolean success;
    private int nodeNum;
    public Stack<node> ast;
    Stack<String> derivationStack;
    PrintWriter pwDerivation;
    PrintWriter pwSyntaxError;

    public parse(LinkedList<token> tokenLinkedList, String outputLocation){
        this.tokens = (LinkedList<token>) tokenLinkedList.clone();
        this.lookahead = tokenLinkedList.getFirst();
        this.e = new error();
        this.e.createTable();
        this.success = true;
        this.nodeNum = 0;
        this.derivationStack = new Stack<>();
        this.ast = new Stack<>();


        String outderivation = outputLocation.replace(".src", ".outderivation");
        String outsyntaxerrors = outputLocation.replace(".src", ".outsyntaxerrors");
        try {
            this.pwDerivation = new PrintWriter(outderivation, "UTF-8");
            this.pwSyntaxError = new PrintWriter(outsyntaxerrors, "UTF-8");
        }catch (IOException e){
            System.out.println(e.getMessage());
        }
    }

    private void nextToken(){
//        System.out.println(lookahead);
        tokens.pop();
        // at the end of input we return an epsilon token
        if (tokens.isEmpty())
            lookahead = new token("EPSILON" , new StringBuilder(" "), -1);
        else
            lookahead = tokens.getFirst();
    }

    private boolean match(String token){
        if (lookahead.getToken().equals(token)){
            switch (token){
                case "id" : A_CREATEADD(lookahead.getToken());
                    break;
                case "class" : A_CREATEADD(lookahead.getToken());
                    break;
                case "inherits" : A_CREATEADD(lookahead.getToken());
                    break;
                case "public" : A_CREATEADD(lookahead.getToken());
                    break;
                case "private" : A_CREATEADD(lookahead.getToken());
                    break;
                case "if" : A_CREATEADD(lookahead.getToken());
                    break;
                case "while" : A_CREATEADD(lookahead.getToken());
                    break;
                case "read" : A_CREATEADD(lookahead.getToken());
                    break;
                case "write" : A_CREATEADD(lookahead.getToken());
                    break;
                case "return" : A_CREATEADD(lookahead.getToken());
                    break;
                case "plus" : A_CREATEADD(lookahead.getToken());
                    break;
                case "minus" : A_CREATEADD(lookahead.getToken());
                    break;
                case "or" : A_CREATEADD(lookahead.getToken());
                    break;
                case "eq" : A_CREATEADD(lookahead.getToken());
                    break;
                case "neq" : A_CREATEADD(lookahead.getToken());
                    break;
                case "lessthan" : A_CREATEADD(lookahead.getToken());
                    break;
                case "gt" : A_CREATEADD(lookahead.getToken());
                    break;
                case "leq" : A_CREATEADD(lookahead.getToken());
                    break;
                case "geq" : A_CREATEADD(lookahead.getToken());
                    break;
                case "mult" : A_CREATEADD(lookahead.getToken());
                    break;
                case "div" : A_CREATEADD(lookahead.getToken());
                    break;
                case "and" : A_CREATEADD(lookahead.getToken());
                    break;
                case "integer" : A_CREATEADD(lookahead.getToken());
                    break;
                case "float" : A_CREATEADD(lookahead.getToken());
                    break;
                case "not" : A_CREATEADD(lookahead.getToken());
                    break;
                case "main" : A_CREATEADD(lookahead.getToken());
                    break;
                case "void" : A_CREATEADD(lookahead.getToken());
                    break;
                case "intnum" : A_CREATEADD(lookahead.getToken());
                    break;
                case "floatnum" : A_CREATEADD(lookahead.getToken());
                    break;
                case "equal" : A_CREATEADD(lookahead.getToken());
                    break;
//                case "integer" : A_CREATEADD(lookahead);
//                    break;
//                case "integer" : A_CREATEADD(lookahead);
//                    break;
//                case "integer" : A_CREATEADD(lookahead);
//                    break;
//                case "integer" : A_CREATEADD(lookahead);
//                    break;
                default: break;
            }
            nextToken();
            return true;
        }else {
            pwSyntaxError.write("SYNTAX ERROR IN LINE NO: "+lookahead.getLinenum()+ " EXPECTED: "+token+" GOT "+lookahead.getToken());
            nextToken();
            return false;
        }
    }

    private boolean skipErrors(String NonTerminal){
        if ( (e.FIRST(NonTerminal).contains(lookahead.getToken()))
                || ( (e.isNULLABLE(NonTerminal)) && (e.FOLLOW(NonTerminal).contains(lookahead.getToken())) ) ){
            return true;
        } else {
            pwSyntaxError.write("SYNTAX ERROR IN LINE NO: "+lookahead.getLinenum()+ " EXPECTED: "+lookahead.getToken()+"" +
                    " IN METHOD: "+NonTerminal);
            while ( (!e.FIRST(NonTerminal).contains(lookahead.getToken()))
                    || (!e.FOLLOW(NonTerminal).contains(lookahead.getToken())) ){
                nextToken();
                if ( (e.isNULLABLE(NonTerminal)) && (e.FOLLOW(NonTerminal).contains(lookahead.getToken())) ){
                    return false;
                }
            }
            return true;
        }
    }

    public boolean parse() {

        if (START())
            derivationStack.push("Sucessfuly parsed the source code!\n");
//            pwDerivation.write("Sucessfuly parsed the source code!");

        while ( !derivationStack.isEmpty()){
            String derv = derivationStack.pop();
            pwDerivation.write(derv);
        }
        pwSyntaxError.flush();
        pwDerivation.flush();
        pwSyntaxError.close();
        pwSyntaxError.close();

        return success;
    }

    private boolean START(){
//        START  -> PROGRAM .
        if (!skipErrors("START")) return false;
        if (e.FIRST("PROGRAM").contains(lookahead.getToken())){
            if (PROGRAM()){
                derivationStack.push("START  -> PROGRAM .\n");
            }else success = false;
        }else success = false;
        return success;
    }

    private boolean PROGRAM(){
//        PROGRAM -> #1 REPTCLASSDECL #2 REPTFUNCDEF #2 main FUNCBODY #2 #2 .
        if (!skipErrors("PROGRAM")) return false;
        if (e.FIRST("REPTCLASSDECL").contains(lookahead.getToken()) || e.isNULLABLE("REPTCLASSDECL")){
            if (A_CREATEADD("program") && REPTCLASSDECL() && A_RIGHTCHILD() && REPTFUNCDEF()
                    && A_RIGHTCHILD() && match("main") && FUNCBODY() && A_RIGHTCHILD() && A_RIGHTCHILD()){ //&& A_RIGHTCHILD()
                derivationStack.push("PROGRAM  ->  REPTCLASSDECL REPTFUNCDEF main FUNCBODY .\n");
            }else success = false;
        }else success = false;
        return success;
    }

    private boolean REPTCLASSDECL(){
//        REPTCLASSDECL -> #1 CLASSDECL #2 REPTCLASSDECL #4 .
//        REPTCLASSDECL ->  .
        if (!skipErrors("REPTCLASSDECL")) return false;
        if (e.FIRST("CLASSDECL").contains(lookahead.getToken()) ){
            if (A_CREATEADD("class_list") && CLASSDECL() && A_RIGHTCHILD()
                    && REPTCLASSDECL() && A_ADOPTS()){
                derivationStack.push("REPTCLASSDECL -> CLASSDECL  REPTCLASSDECL .\n");
            }else success = false;
        }else if (e.FOLLOW("REPTCLASSDECL").contains(lookahead.getToken())){
            if(A_CREATEADD("class_list")){
                derivationStack.push("REPTCLASSDECL ->  .\n");
            }
        }else success = false;
        return success;
    }

    private boolean CLASSDECL(){
//        CLASSDECL -> class id #2 OPTCLASSDECL2 #2 lcurbr MEMBER_DECLARATIONS #2 rcurbr semi  .
        if (!skipErrors("CLASSDECL")) return false;
        if (e.FIRST("CLASSDECL").contains(lookahead.getToken())){
            if (match("class") && match("id") && A_RIGHTCHILD()
                    && OPTCLASSDECL2() && A_RIGHTCHILD() && match("lcurbr")
                    && MEMBER_DECLARATIONS() && A_RIGHTCHILD() && match("rcurbr") && match("semi")){
                derivationStack.push("CLASSDECL  -> class id OPTCLASSDECL2 lcurbr MEMBER_DECLARATIONS rcurbr semi .\n");
            }else success = false;
        }else success = false;
        return success;
    }

    private boolean REPTFUNCDEF(){
//        REPTFUNCDEF -> #1 FUNCDEF #2 REPTFUNCDEF #4  .
//        REPTFUNCDEF ->  .
        if (!skipErrors("REPTFUNCDEF")) return false;
        if (e.FIRST("FUNCDEF").contains(lookahead.getToken()) ){
            if (A_CREATEADD("function_list") && FUNCDEF() && A_RIGHTCHILD()
                    && REPTFUNCDEF() && A_ADOPTS()){
                derivationStack.push("REPTFUNCDEF -> FUNCDEF REPTFUNCDEF .\n");
            }else success = false;
        }else if (e.FOLLOW("REPTFUNCDEF").contains(lookahead.getToken())){
            if(A_CREATEADD("function_list")){
                derivationStack.push("REPTFUNCDEF ->  .\n");
            }
        }else success = false;
        return success;
    }

    private boolean FUNCDEF(){
//        FUNCDEF  -> #1(function) FUNCTION_SIGNATURE #2 FUNCBODY #2 .
        if (!skipErrors("FUNCDEF")) return false;
        if (e.FIRST("FUNCTION_SIGNATURE").contains(lookahead.getToken())){
            if (A_CREATEADD("func_def") && FUNCTION_SIGNATURE() && A_RIGHTCHILD()
                    && FUNCBODY() && A_RIGHTCHILD()){
                derivationStack.push("FUNCDEF  -> FUNCTION_SIGNATURE FUNCBODY semi .\n");
            }else success = false;
        }else success = false;
        return success;
    }

    private boolean MEMBER_DECLARATIONS(){
//        MEMBER_DECLARATIONS  -> #1 VISIBILITY MEMBER_DECLARATION #3 #2 MEMBER_DECLARATIONS #4 .
//        MEMBER_DECLARATIONS  ->  .
        if (!skipErrors("MEMBER_DECLARATIONS")) return false;
        if (e.FIRST("VISIBILITY").contains(lookahead.getToken())){
            if (A_CREATEADD("var+func decl list") && VISIBILITY() && MEMBER_DECLARATION() && A_LEFTCHILD()
                    && A_RIGHTCHILD() && MEMBER_DECLARATIONS() && A_ADOPTS()){
                derivationStack.push("MEMBER_DECLARATIONS  -> VISIBILITY MEMBER_DECLARATION MEMBER_DECLARATIONS .\n");
            }else success = false;
        }else if (e.FOLLOW("REPTCLASSDECL").contains(lookahead.getToken()) || e.isNULLABLE("REPTCLASSDECL") ){ //
            if (A_CREATEADD("var+func decl list")){
                derivationStack.push("REPTCLASSDECL ->  .\n");
            }
        }else success = false;
        return success;
    }

    private boolean MEMBER_DECLARATION(){
//        MEMBER_DECLARATION -> TYPE_NON_ID VARIABLE_DECLARATION #3 .
//        MEMBER_DECLARATION -> id FUNCTION_OR_VARIABLE_DECLARATION #3 .
        if (!skipErrors("MEMBER_DECLARATION")) return false;
        if (e.FIRST("TYPE_NON_ID").contains(lookahead.getToken())){
            if (TYPE_NON_ID() && VARIABLE_DECLARATION() && A_LEFTCHILD()){
                derivationStack.push("MEMBER_DECLARATION -> TYPE_NON_ID VARIABLE_DECLARATION .\n");
            }else success = false;
        }else if (e.FIRST("MEMBER_DECLARATION").contains(lookahead.getToken())){
            if (match("id") && FUNCTION_OR_VARIABLE_DECLARATION() && A_LEFTCHILD()){
                derivationStack.push("MEMBER_DECLARATION -> id FUNCTION_OR_VARIABLE_DECLARATION .\n");
            }else  success = false;
        }else success = false;
        return success;
    }

    private boolean FUNCTION_OR_VARIABLE_DECLARATION(){
//        FUNCTION_OR_VARIABLE_DECLARATION -> FUNCTION_DECLARATION .
//        FUNCTION_OR_VARIABLE_DECLARATION -> VARIABLE_DECLARATION .
        if (!skipErrors("FUNCTION_OR_VARIABLE_DECLARATION")) return false;
        if (e.FIRST("FUNCTION_DECLARATION").contains(lookahead.getToken())){
            if (FUNCTION_DECLARATION()){
                derivationStack.push("FUNCTION_OR_VARIABLE_DECLARATION -> FUNCTION_DECLARATION .\n");
            }else success = false;
        }else if (e.FIRST("VARIABLE_DECLARATION").contains(lookahead.getToken())){
            if (VARIABLE_DECLARATION()){
                derivationStack.push("FUNCTION_OR_VARIABLE_DECLARATION -> VARIABLE_DECLARATION .\n");
            }else success = false;
        }else success = false;
        return success;
    }

    private boolean VISIBILITY(){
//        VISIBILITY -> public .
//        VISIBILITY -> private .
        if (!skipErrors("VISIBILITY")) return false;
        if (e.FIRST("VISIBILITY").contains(lookahead.getToken())){
            switch (lookahead.getToken()){
                case "public" : match("public");
                    derivationStack.push("VISIBILITY -> public .\n");
                    break;
                case "private" : match("private");
                    derivationStack.push("VISIBILITY -> private .\n");
                    break;
                default: success = false;
                break;
            }
        }else success = false;
        return success;
    }

    private boolean STATEMENT(){
        if (!skipErrors("STATEMENT")) return false;
//        STATEMENT  -> ASSIGN_STATEMENT_OR_FUNCTION_CALL .
        if (e.FIRST("ASSIGN_STATEMENT_OR_FUNCTION_CALL").contains(lookahead.getToken())){
            if (ASSIGN_STATEMENT_OR_FUNCTION_CALL()){
                derivationStack.push("STATEMENT  -> ASSIGN_STATEMENT_OR_FUNCTION_CALL .\n");
            }else success = false;
        }
//        STATEMENT  -> if lpar REL_EXPRESSION #2 rpar then STATEMENT_BLOCK #2 else STATEMENT_BLOCK #2 semi  .
//        STATEMENT  -> while lpar REL_EXPRESSION #2 rpar STATEMENT_BLOCK #2 semi  .
//        STATEMENT  -> read lpar STATEMENT_VARIABLE #6 #5 #2 rpar semi  .
//        STATEMENT  -> write lpar EXPRESSION #2 rpar semi  .
//        STATEMENT  -> return lpar EXPRESSION #2 rpar semi  .
        else if (e.FIRST("STATEMENT").contains(lookahead.getToken())){

            switch (lookahead.getToken()){
                case "if": if ( match("if") && match("lpar") && REL_EXPRESSION() && A_RIGHTCHILD()
                        && match("rpar") && match("then") && STATEMENT_BLOCK() && A_RIGHTCHILD()
                        && match("else") && STATEMENT_BLOCK() && A_RIGHTCHILD() && match("semi") ){
                    derivationStack.push("STATEMENT  -> if lpar REL_EXPRESSION rpar then STATEMENT_BLOCK else STATEMENT_BLOCK semi .\n");
                }break;
                case "while" : if ( match("while") && match("lpar") && REL_EXPRESSION() && A_RIGHTCHILD()
                        && match("rpar") && STATEMENT_BLOCK() && A_RIGHTCHILD() && match("semi") ){
                    derivationStack.push("STATEMENT  -> while lpar REL_EXPRESSION rpar STATEMENT_BLOCK semi .\n");
                }break;
                case "read" : if (match("read") && match("lpar") && STATEMENT_VARIABLE() && A_DELETE()
                        && A_GROUP() && A_RIGHTCHILD()  && match("rpar") && match("semi")){
                    derivationStack.push("STATEMENT  -> read lpar STATEMENT_VARIABLE rpar semi .\n");
                }break;
                case "write" : if (match("write") && match("lpar") && EXPRESSION()
                        && A_RIGHTCHILD() && match("rpar") && match("semi")){
                    derivationStack.push("STATEMENT  -> write lpar EXPRESSION rpar semi .\n");
                }break;
                case "return" : if (match("return") && match("lpar") && EXPRESSION()
                        && A_RIGHTCHILD() && match("rpar") && match("semi")){
                    derivationStack.push("STATEMENT  -> return lpar EXPRESSION rpar semi .\n");
                }break;
                default: success = false;
                break;
            }

        }else success = false;
        return success;
    }

    private boolean STATEMENT_VARIABLE(){
//        STATEMENT_VARIABLE -> #1(item) id #2 STATEMENT_VARIABLE_OR_FUNCTION_CALL .
        if (!skipErrors("STATEMENT_VARIABLE")) return false;
        if (e.FIRST("STATEMENT_VARIABLE").contains(lookahead.getToken())){
            if (A_CREATEADD("call") && match("id") && A_RIGHTCHILD()
                    && STATEMENT_VARIABLE_OR_FUNCTION_CALL()){
                derivationStack.push("STATEMENT_VARIABLE -> id STATEMENT_VARIABLE_OR_FUNCTION_CALL .\n");
            }else success = false;
        }else success = false;
        return success;
    }

    private boolean STATEMENT_VARIABLE_OR_FUNCTION_CALL(){
//        STATEMENT_VARIABLE_OR_FUNCTION_CALL  -> INDICES #2 STATEMENT_VARIABLE_EXT .
//        STATEMENT_VARIABLE_OR_FUNCTION_CALL  -> lpar FUNCTION_CALL_PARAMS #2 rpar STATEMENT_FUNCTION_CALL .
        if (!skipErrors("STATEMENT_VARIABLE_OR_FUNCTION_CALL")) return false;
        if (e.FIRST("INDICES").contains(lookahead.getToken()) || e.isNULLABLE("INDICES")){ //
            if (INDICES() && A_RIGHTCHILD() && STATEMENT_VARIABLE_EXT()){
                derivationStack.push("STATEMENT_VARIABLE_OR_FUNCTION_CALL  -> INDICES STATEMENT_VARIABLE_EXT .\n");
            }else success = false;
        }else if (e.FIRST("STATEMENT_VARIABLE_OR_FUNCTION_CALL").contains(lookahead.getToken())){
            if (match("lpar") && FUNCTION_CALL_PARAMS() && A_RIGHTCHILD() && match("rpar")
                    && STATEMENT_FUNCTION_CALL()){
                derivationStack.push("STATEMENT_VARIABLE_OR_FUNCTION_CALL  -> lpar FUNCTION_CALL_PARAMS rpar STATEMENT_FUNCTION_CALL .\n");
            }else success = false;
        }else success = false;
        return success;
    }

    private boolean STATEMENT_VARIABLE_EXT(){
//        STATEMENT_VARIABLE_EXT -> dot STATEMENT_VARIABLE .
//        STATEMENT_VARIABLE_EXT ->  .
        if (!skipErrors("STATEMENT_VARIABLE_EXT")) return false;
        if (e.FIRST("STATEMENT_VARIABLE_EXT").contains(lookahead.getToken())){
            if (match("dot") && STATEMENT_VARIABLE()){
                derivationStack.push("STATEMENT_VARIABLE_EXT -> dot STATEMENT_VARIABLE .\n");
            }else success = false;
        }else if (e.FOLLOW("STATEMENT_VARIABLE_EXT").contains(lookahead.getToken())){
            if (A_CREATEADD("STATEMENT_VARIABLE_EXT")){
                derivationStack.push("STATEMENT_VARIABLE_EXT ->  .\n");
            }
        }else success = false;
        return success;
    }

    private boolean STATEMENT_FUNCTION_CALL(){
//        STATEMENT_FUNCTION_CALL  -> dot STATEMENT_VARIABLE .
        if (!skipErrors("STATEMENT_FUNCTION_CALL")) return false;
        if (e.FIRST("STATEMENT_FUNCTION_CALL").contains(lookahead.getToken())){
            if (match("dot") && STATEMENT_VARIABLE()){
                derivationStack.push("STATEMENT_FUNCTION_CALL  -> dot STATEMENT_VARIABLE .\n");
            }else success = false;
        }else success = false;
        return success;
    }

    private boolean ASSIGN_STATEMENT_OR_FUNCTION_CALL(){
//        ASSIGN_STATEMENT_OR_FUNCTION_CALL  -> #1(item) id #2 VARIABLE_OR_FUNCTION_CALL_EXT .
        if (!skipErrors("ASSIGN_STATEMENT_OR_FUNCTION_CALL")) return false;
        if (e.FIRST("ASSIGN_STATEMENT_OR_FUNCTION_CALL").contains(lookahead.getToken())){
            if (A_CREATEADD("call") && match("id") && A_RIGHTCHILD() && VARIABLE_OR_FUNCTION_CALL_EXT()){
                derivationStack.push("ASSIGN_STATEMENT_OR_FUNCTION_CALL  -> id VARIABLE_OR_FUNCTION_CALL_EXT .\n");
            }else success = false;
        }else success = false;
        return success;
    }

    private boolean VARIABLE_OR_FUNCTION_CALL_EXT(){
//        VARIABLE_OR_FUNCTION_CALL_EXT  -> INDICES #2 VARIABLE_EXT .
//        VARIABLE_OR_FUNCTION_CALL_EXT  -> lpar FUNCTION_CALL_PARAMS #2 rpar FUNCTION_CALL_EXT .
        if (!skipErrors("VARIABLE_OR_FUNCTION_CALL_EXT")) return false;
        if (e.FIRST("INDICES").contains(lookahead.getToken()) || e.FIRST("VARIABLE_EXT").contains(lookahead.getToken())){ // || e.isNULLABLE("INDICES") || e.FOLLOW("INDICES").contains(lookahead.getToken())
            if (INDICES() && A_RIGHTCHILD() && VARIABLE_EXT()){
                derivationStack.push("STATEMENT_VARIABLE_OR_FUNCTION_CALL  -> INDICES STATEMENT_VARIABLE_EXT .\n");
            }else success = false;
        }else if (lookahead.getToken().equals("lpar")){
            if (match("lpar") && FUNCTION_CALL_PARAMS() && A_RIGHTCHILD()
                    && match("rpar") && FUNCTION_CALL_EXT()){
                derivationStack.push("STATEMENT_VARIABLE_OR_FUNCTION_CALL  -> lpar FUNCTION_CALL_PARAMS rpar STATEMENT_FUNCTION_CALL .\n");
            }else success = false;
        }else success = false;
        return success;
    }

    private boolean VARIABLE_EXT(){
//        VARIABLE_EXT -> #5 ASSIGNMENT_OP #3 EXPRESSION #2 semi .
//        VARIABLE_EXT -> dot ASSIGN_STATEMENT_OR_FUNCTION_CALL .
        if (!skipErrors("VARIABLE_EXT")) return false;
        if (e.FIRST("ASSIGNMENT_OP").contains(lookahead.getToken())){
            if (A_GROUP() && ASSIGNMENT_OP() && A_LEFTCHILD() && EXPRESSION() && A_RIGHTCHILD()
                    && match("semi")){
                derivationStack.push("VARIABLE_EXT -> ASSIGNMENT_OP EXPRESSION semi .\n");
            }else success = false;
        }else if (e.FIRST("VARIABLE_EXT").contains(lookahead.getToken())){
            if (match("dot") && ASSIGN_STATEMENT_OR_FUNCTION_CALL()){
                derivationStack.push("VARIABLE_EXT -> dot ASSIGN_STATEMENT_OR_FUNCTION_CALL .\n");
            }else success = false;
        }else success = false;
        return success;
    }

    private boolean FUNCTION_CALL_EXT(){
//        FUNCTION_CALL_EXT  -> FUNCTION_CALL_EXT -> #5 #1(func_call) #3 semi .
//        FUNCTION_CALL_EXT  -> dot ASSIGN_STATEMENT_OR_FUNCTION_CALL .
        if (!skipErrors("FUNCTION_CALL_EXT")) return false;
        if (e.FIRST("FUNCTION_CALL_EXT").contains(lookahead.getToken())){
            if (lookahead.getToken().equals("semi")){
                if (A_GROUP() && A_CREATEADD("FUNC_CALL") && A_LEFTCHILD() && match("semi")){
                    derivationStack.push("FUNCTION_CALL_EXT  -> semi .\n");
                }
            }else if (lookahead.getToken().equals("dot"))
                if (match("dot") && ASSIGN_STATEMENT_OR_FUNCTION_CALL()){
                derivationStack.push("FUNCTION_CALL_EXT  -> dot ASSIGN_STATEMENT_OR_FUNCTION_CALL .\n");
            }else success = false;
        }else success = false;
        return success;
    }

    private boolean FUNCTION_PARAMS(){
//        FUNCTION_PARAMS  -> #1 #1(param) TYPE #2 id #2 ARRAY_DIMENSIONS #2 #2 FUNCTION_PARAMS_TAILS #4 .
//        FUNCTION_PARAMS  ->  .
        if (!skipErrors("FUNCTION_PARAMS")) return false;
        if (e.FIRST("TYPE").contains(lookahead.getToken())){
            if (A_CREATEADD("fParam list") && A_CREATEADD("fparam") && TYPE() && A_RIGHTCHILD()
                    && match("id") && A_RIGHTCHILD() && ARRAY_DIMENSIONS() && A_RIGHTCHILD() && A_RIGHTCHILD()
                    && FUNCTION_PARAMS_TAILS() && A_ADOPTS()){
                derivationStack.push("FUNCTION_PARAMS  -> TYPE id ARRAY_DIMENSIONS FUNCTION_PARAMS_TAILS .\n");
            }else success = false;
        }else if (e.FOLLOW("FUNCTION_PARAMS").contains(lookahead.getToken())){
            if (A_CREATEADD("FUNCTION_PARAMS")){
                derivationStack.push("FUNCTION_PARAMS ->  .\n");
            }
        }else success = false;
        return success;
    }
